<resources>
    <string name="app_name">LAFA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_expose_answer">Tap to see answer</string>
    <string name="heading_library">Library</string>
    <string name="heading_explore">Explore</string>
    <string name="title_activity_view_flash_set">ViewFlashSetActivity</string>
    <string name="button_label_share">Share FlashSet</string>
    <string name="menu_label_new">New</string>
    <string name="title_activity_create_flash_set">Create Flash Set</string>
    <string name="label_title">Title *</string>
    <string name="label_author">Author</string>
    <string name="desc_title">
        The title of the FlashSet. This should be concise but describe the set\'s
        contents.
    </string>
    <string name="desc_author">The author of the set (yourself).</string>
    <string name="dialog_share_type">Share Data or Link?</string>
    <string name="dialog_share_opt_link">Link</string>
    <string name="dialog_share_opt_data">Data</string>
    <string name="dialog_share_opt_cancel">Cancel</string>
    <string name="label_new_card">Question</string>
    <string name="label_answer">Answer</string>
    <string name="desc_add_flashcard">Add FlashCard</string>
    <string name="desc_preview">Preview</string>
    <string name="label_menu_save">Save</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="label_flashcard_edit">Edit</string>
    <string name="label_flashcard_delete">Delete</string>
    <string name="menu_label_download">Download</string>
    <string name="placeholder_uri">https://api.myjson.com/bins/test.json</string>
    <string name="label_json_warning">Please ensure this endpoint has been generated by LAFA or points directly to JSON data.</string>
    <string name="label_data_endpoint">FlashSet Endpoint</string>
    <string name="label_menu_shuffle">Shuffle</string>
    <string name="label_menu_share">Share</string>
    <string name="label_menu_listen">Listen</string>
    <string name="label_settings">Settings</string>
    <string name="label_clear_all_data">Clear All Data</string>
    <string name="menu_item_settings">Settings</string>
</resources>
