<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.strik.lafa.CreateFlashSetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_createForm_first"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp">

        <GridLayout style="@style/FormTriElementGrid">

            <TextView
                android:id="@+id/label_set_title"
                style="@style/FormLabel"
                android:text="@string/label_title" />

            <EditText
                android:id="@+id/editText_set_title"
                style="@style/FormTextInput"
                android:inputType="textAutoComplete" />

            <TextView
                style="@style/FormDescription"
                android:text="@string/desc_title" />
        </GridLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_gridSpacing" />

        <GridLayout style="@style/FormTriElementGrid">

            <TextView
                android:id="@+id/label_set_author"
                style="@style/FormLabel"
                android:text="@string/label_author" />

            <EditText
                android:id="@+id/editText_set_author"
                style="@style/FormTextInput"
                android:inputType="textCapWords" />

            <TextView
                style="@style/FormDescription"
                android:text="@string/desc_author" />
        </GridLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_create_flash_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_next"
        app:backgroundTint="@color/colorFab"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/layout_createForm_first"
        app:layout_constraintRight_toRightOf="@+id/layout_createForm_first"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
