<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.strik.lafa.ModifyFlashSetActivity">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/heightCard"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:cardBackgroundColor="@color/md_amber_50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:rowCount="5">

            <TextView
                android:layout_row="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_new_card"
                android:textSize="18sp" />

            <EditText
                android:layout_row="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="22sp"
                />
            <TextView
                android:layout_row="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_answer"
                android:textSize="18sp" />

            <EditText
                android:layout_row="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="22sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@null"
                    android:contentDescription="@string/desc_preview"
                    android:src="@drawable/ic_preview" />

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@null"
                    android:contentDescription="@string/desc_add_flashcard"
                    android:src="@drawable/ic_add" />
            </LinearLayout>
        </GridLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
